--- a/Documents/nomadcoder/index.html
+++ b/Documents/nomadcoder/index.html
@@ -8,10 +8,10 @@
     <title>Momentum</title>
 </head>
 <body>
-    <h1 class="hello">Grab me!</h1>    
-
-
-    <h1 autofocus class="hello" id="title">Grab me!</h1>
+    <div class="hello">
+        <h1 class="sexy-font">Click me!</h1>    
+        <h2 class="title" id="title">Grab me!</h2>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
