--- a/Login/index.html
+++ b/Login/index.html
@@ -8,11 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-    <form id="login-form">
+    <form id="login-form" class="">
         <input required maxlength="15" type="text" placeholder="What is your name?"/>
         <input type="submit" value="Log In"/>
         <a href="https://nomadcoders.co">Go to Courses</a>
     </form>
+    <h1 id="greeting" class="hidden"></h1>
     <script src="app.js"></script>
 </body>
 </html>
