--- a/Login/index.html
+++ b/Login/index.html
@@ -8,12 +8,31 @@
     <title>Document</title>
 </head>
 <body>
+    <h2 id="clock"> 00:00:00</h2>
     <form id="login-form" class="">
         <input required maxlength="15" type="text" placeholder="What is your name?"/>
         <input type="submit" value="Log In"/>
-        <a href="https://nomadcoders.co">Go to Courses</a>
+        <!-- <a href="https://nomadcoders.co">Go to Courses</a> -->
     </form>
     <h1 id="greeting" class="hidden"></h1>
+    <form id="todo-form">
+        <input type="text" placeholder="Write a To Do and and Press Enter"/>
+    </form>
+    <ul id="todo-list">
+    </ul>
+    <div id="quote">
+        <span></span>
+        <span></span>
+    </div>
+    <div id="weather">
+        <span></span>
+        <span></span>
+    </div>
     <script src="app.js"></script>
+    <script src="clock.js"></script>
+    <script src="quotes.js"></script>
+    <script src="background.js"></script>
+    <script src="todo.js"></script>
+    <script src="weather.js"></script>
 </body>
 </html>
